<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:contentDescription="@string/none"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewsave"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/none"
            android:scaleType="fitCenter"
            android:src="@drawable/settings_128" />
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_layout_g"
            android:minHeight="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/autofocus"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cb_autofocus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/check_bg_g"
                    android:button="@null"
                    android:checked="false" />
            </RelativeLayout>
            
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_layout_g"
            android:minHeight="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/previewsize"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_previewsize"
                    style="@style/spinner_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:alpha="80"
                    android:entries="@array/previewsizetext"
                    android:prompt="@string/previewsize0"
                    android:textColor="@color/black" />

            </RelativeLayout>            

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_layout_g"
                android:minHeight="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/savesize"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_savesize"
                    style="@style/spinner_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:alpha="80"
                    android:entries="@array/savesizetext"
                    android:prompt="@string/savesize0"
                    android:textColor="@color/black" />

            </RelativeLayout>
	
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_layout_g"
                android:minHeight="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/saveperoid"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_saveperoid"
                    style="@style/spinner_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:alpha="80"
                    android:entries="@array/peroidtext"
                    android:prompt="@string/saveperoid0"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_layout_g"
                android:minHeight="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/savepath"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_savepath"
                    style="@style/spinner_style"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:alpha="80"
                    android:entries="@array/pathtext"
                    android:prompt="@string/savepath0"
                    android:textColor="@color/black" />

            </RelativeLayout>
	<RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_comitsave"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:background="@drawable/button_selector"
                android:padding="12dp"
                android:text="@string/comitttask"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
            
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

