<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:contentDescription="@string/none"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical" >
        
		<ImageView
		    android:id="@+id/imageViewclock"
		    android:layout_width="120dp"
		    android:layout_height="120dp"
		    android:contentDescription="@string/none"
		    android:scaleType="fitCenter"
		    android:src="@drawable/clock_128" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_layout_g"
            android:minHeight="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/timerdo"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cb_timerdo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/check_bg_g"
                    android:button="@null"
                    android:checked="false"
                    android:longClickable="false" />
            </RelativeLayout>
	<RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_layout_g"
            android:minHeight="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/everydaydo"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cb_everydaydo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/check_bg_g"
                    android:button="@null"
                    android:checked="false"
                    android:longClickable="false" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_layout_g"
                android:minHeight="50dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/starttime"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />                

                <ImageButton
                    android:id="@+id/ibStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="60dp"
                    android:background="@color/blackblue"
                    android:contentDescription="@string/none"
                    android:src="@drawable/selecttime" />
                
                <TextView
                    android:id="@+id/tvStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/srctime"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_layout_g"
                android:minHeight="50dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/stoptime"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/ibStopTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="60dp"
                    android:background="@color/blackblue"
                    android:contentDescription="@string/none"
                    android:src="@drawable/selecttime" />

                <TextView
                    android:id="@+id/tvStopTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/dsttime"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_layout_g"
                android:minHeight="50dp" >

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/dingshitips"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

            </RelativeLayout>
            
	<RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_comitttask"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:background="@drawable/button_selector"
                android:padding="12dp"
                android:text="@string/comitttask"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
            
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

